fix:navbar overflow issue

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,5 +1,6 @@
 .nav-container {
   background-color: var(--brand-secondary);
+  justify-content: start + safe;
   align-items: center;
   padding: 1rem;
 }
